# auge-transportation-system

./: .env.example  .gitignore  Dockerfile  Dockerfile.consumer  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
config/: kafka-topics.yaml
docs/: testing-standards.md
init-db/: 01-init.sql
scripts/: init-kafka-topics.py
src/: config.py  consumer_service.py  run_crewai.py
src/crewai_service/: __init__.py  config.py  kafka_consumer.py  service.py  test_service.py
src/database/: crewai_extensions.py  manager.py  models.py  redis_manager.py
src/kafka_service/: __init__.py  consumer.py  producer.py
src/quotation_service/: __init__.py  events.py
src/tests/: step1_test_models.py  step1_test_postgres.py  step1_test_redis.py  step2_test_conversation_persistence.py  step2_test_full_stack.py  step2_test_redis_api.py  step2_test_webhook.py  step2_test_whatsapp_webhook.py  step3_test_complete_stack.py  step3_test_consumer.py  step3_test_end_to_end.py  step3_test_error_handling.py  step3_test_kafka.py  step3_test_kafka_consumer.py  step3_test_kafka_producer.py  step3_test_quotation_api.py  step3_test_topics.py  step3_test_webhook_kafka.py  step4_test_agent_coordination.py  step4_test_agent_framework.py  step4_test_crewai_conversation_state.py  step4_test_crewai_service.py  step4_test_whatsapp_models.py  test_conversation_persistence_step2.py  test_full_stack_step2.py  test_kafka_producer_step3.py  test_kafka_step3.py  test_postgres_step1.py  test_topics_step3.py  test_webhook_kafka_step3.py
src/webhook_service/: main.py  session_models.py  whatsapp_models.py
(+23 files in other folders)
